[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Modifier Cards/Card_Container.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 1, 0.235294, 0.156863, 0.807843 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Card" type="Panel"]
margin_right = 350.0
margin_bottom = 230.0
rect_min_size = Vector2( 350, 230 )
rect_pivot_offset = Vector2( 175, 115 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 30.0
margin_right = 343.0
margin_bottom = 220.0
rect_min_size = Vector2( 336, 200 )
mouse_filter = 2

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 336.0
margin_bottom = 45.0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "TITLE HERE"
align = 1
autowrap = true
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 49.0
margin_right = 336.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 1

[node name="Description" type="RichTextLabel" parent="VBoxContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 336.0
margin_bottom = 94.0
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Description Here"
text = "Description Here"
fit_content_height = true
scroll_active = false

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
